se definieron contendedores y colores en el

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huerta en casa</title>
+    <link rel="stylesheet" href="./styles.css"
 </head>
 <body>
-    <nav></nav>
-<main></main>
+    <nav class="nav"></nav>
+    <ul>
+        <li>info</li>
+        <li>contacto</li>
+        <li>Más</li>
+    </ul>
+<main class="container">
+    <div class="c1"></div>
+    <div class="c2"></div>
+    <div class="c3"></div>
+</main>
+
 <footer></footer>    
 </body>
 </html>
