amplio el titulo
amplie el titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css"
 </head>
 <body>
-    <h1>Mi primera huerta</h1>
+    <h1>Mi primera huerta!Que emocion!</h1>
     <nav class="nav"></nav>
     <ul>
         <li>info</li>
