--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huerta en casa</title>
     <link rel="stylesheet" href="./styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="nav">
@@ -67,7 +70,24 @@ para el manejo y el inicio de este proceso</li>
     <div class="i"></div>
     <div class="i"></div>
 </div>    
+<div class="login">
+    <div class="form-container">
+    <img src="./logohuerta.png" alt="logo" class="logo">
+    
 
+    <h1 class="title">Nueva contraseña</h1>
+    <p class="sub-title">Tu nueva contraseña</p>
+    <form action="/" class="form">
+        <label form="Contraseña" class="label">Contraseña</label>
+        <input type="Contraseña" id="Contraseña" placeholder="*********" class="input-Contraseña">
+
+        <label form="Nueva-contraseña" class="label">Nueva contraseña</label>
+        <input type="Nueva-contraseña" id="Nueva-contraseña" placeholder="*********" 
+        class="input-nueva-contraseña">
+        <input type="submit" value="Confirmar" class="primary-button"> 
+    </form>
+    </div>
+</div>
 
 <footer>
     <div class="f1">info</div>
