--- a/index.html
+++ b/index.html
@@ -65,10 +65,24 @@ para el manejo y el inicio de este proceso</li>
     
     
 <div class="imagenes">
-    <div class="i"></div>
-    <div class="i"></div>
-    <div class="i"></div>
-    <div class="i"></div>
+    <div class="i">
+        <img src="https://images.pexels.com/photos/8180576/pexels-photo-8180576.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="tomates">
+    </div>
+    <div class="i">
+        <img src="https://media.istockphoto.com/id/171288607/es/foto/albahaca-fresca.jpg?s=612x612&w=is&k=20&c=9elqkoribhboddF2IFrnNTsLmOtaVI6o9W9lvKyGXng=" alt="albaca">
+    </div>
+    <div class="i">
+        <img src="https://images.pexels.com/photos/4871248/pexels-photo-4871248.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="oregano">
+    </div>
+    <div class="i">
+        <img src="https://media.istockphoto.com/id/1463860838/es/foto/cuajada-fresca-y-hierbas-productos-l%C3%A1cteos.jpg?s=612x612&w=is&k=20&c=qRMXWi716ABC-TSi5B7V9LyCHDjbFgOTOhlSNdE5JPU=" alt="cebollin">
+    </div>
+    <div class="i">
+        <img src="https://media.istockphoto.com/id/139573027/es/foto/de-la-planta.jpg?s=612x612&w=is&k=20&c=BAT3RAYHaEiu1yV3_cBhbJ-VLyctV3yBi1Q3SaqrZOA=" alt="tronco de brasil">
+    </div>
+<div class="i">
+    <img src="https://media.istockphoto.com/id/2148195895/es/foto/cosecha-de-tomates-maduros-en-caja-de-madera-verduras-org%C3%A1nicas-verduras-locales.jpg?s=612x612&w=is&k=20&c=-BZQ7J-Xdhpzz-1KbBCV93Q5zdMI67aRFyVflRTPZy4=" alt="huerta">
+</div>
 </div>    
 <div class="login">
     <div class="form-container">
